Keyframe.select_control_point cannot be False #81155

Closed
opened 2020-09-25 02:17:58 +02:00 by nagadomi · 3 comments

System Information
Operating system: Linux-5.4.0-45-generic-x86_64-with-debian-bullseye-sid 64 Bits
Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.100

Blender Version
Broken: version: 2.90.1, branch: master, commit date: 2020-09-23 06:43, hash: 3e85bb34d0

Short description of error
The last updated keyframe's Keyframe.select_control_point will not be False even though it's deselected in the Graph Editor.
This bug breaks the add-ons that work for selected keyframes.

Exact steps for others to reproduce the error

  1. Open the attached blend file
  2. Run the following code in the Python Console (You can call it from the console history).
[kp.select_control_point for kp in bpy.context.active_object.data.shape_keys.animation_data.action.fcurves[0].keyframe_points]

The result is** [True, True, False]**, even though the second keyframe is not selected. (the attached image)

  1. Deselect all keyframes in the Graph Editor

  2. Run the code
    The result is ** [False, True, False]**.

  3. Select and move the first keyframe in the Graph Editor

  4. Deselect all keyframes

  5. Run the code
    The result is ** [True, False, False]**. Now the first keyframe's select_control_point will no longer be False.

select_control_point.blend
select_control_point.png

**System Information** Operating system: Linux-5.4.0-45-generic-x86_64-with-debian-bullseye-sid 64 Bits Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.100 **Blender Version** Broken: version: 2.90.1, branch: master, commit date: 2020-09-23 06:43, hash: `3e85bb34d0` **Short description of error** The last updated keyframe's **Keyframe.select_control_point** will not be **False** even though it's deselected in the Graph Editor. This bug breaks the add-ons that work for selected keyframes. **Exact steps for others to reproduce the error** 1. Open the attached blend file 2. Run the following code in the Python Console (You can call it from the console history). ``` [kp.select_control_point for kp in bpy.context.active_object.data.shape_keys.animation_data.action.fcurves[0].keyframe_points] ``` The result is** [True, True, False]**, even though the second keyframe is not selected. (the attached image) 1. Deselect all keyframes in the Graph Editor 2. Run the code The result is ** [False, True, False]**. 1. Select and move the first keyframe in the Graph Editor 2. Deselect all keyframes 3. Run the code The result is ** [True, False, False]**. Now the first keyframe's **select_control_point** will no longer be **False**. [select_control_point.blend](https://archive.blender.org/developer/F8917604/select_control_point.blend) ![select_control_point.png](https://archive.blender.org/developer/F8917606/select_control_point.png)
Author

Added subscriber: @nagadomi-4

Added subscriber: @nagadomi-4

This issue was referenced by 8febaae9e4

This issue was referenced by 8febaae9e4f968bff42409151e37f8ef17296ab8

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Campbell Barton self-assigned this 2020-09-25 03:17:55 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#81155
No description provided.