Fix T81155: Keyframe.select_control_point True when unselected

Check the selection flag since BEZT_FLAG_TEMP_TAG might be set.